Adding templs and photos

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -83,7 +83,7 @@ $(document).ready(function () {
       ================================================== -->
       <div class="span5 logo">
 <!--         <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a> -->
-          <h1>Fun Runs 2015: Home</h1>
+          <h1>Fun Runs 2015!</i></h1>
       </div>
       
       <!-- Main Navigation
@@ -153,8 +153,8 @@ $(document).ready(function () {
     ================================================== -->
     <div class="span6">
 
-      <h5 class="title-bg">Meet our
-          <small> bomb-diggity team!</small>
+      <h5 class="title-bg">Related Articles
+          <small> To Discover More Fun Runs!</small>
           <button id="btn-blog-next" class="btn btn-inverse btn-mini" type="button">&raquo;</button>
           <button id="btn-blog-prev" class="btn btn-inverse btn-mini" type="button">&laquo;</button>
       </h5>
@@ -164,132 +164,92 @@ $(document).ready(function () {
           <!-- Carousel items -->
           <div class="carousel-inner">
 
-               <!-- Blog Item 1 -->
+               <!-- Member 1 -->
               <div class="active item">
-                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
+
                   <div class="post-info clearfix">
-                      <h4><a href="blog-single.htm">Kurt Bixby</a></h4>
+                      <h4><a href="http://greatist.com/fitness/21-most-incredible-themed-races">The 21 Most Incredible Themed Races</a></h4>
                       <ul class="blog-details-preview">
-                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
-                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
-                          <li><i class="icon-comment"></i><strong>Comments:</strong> <a href="#" title="Link">12</a><li>
-                          <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
+                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> July 3, 2012<li>
+                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="greatist.com" title="Link">Jordan Shakeshaft on Greatist.com</a><li>
+                          <li><i class="icon-comment"></i><strong>Description: </strong>Zombies, Twinkies, and a photo op with Mickey Mouse? Today’s most amazing themed races feature insane obstacles, over-the-top costumes, and an outrageous supply of tasty treats. The best part: These wild n’ crazy events get the body, mind, and spirit off to the races. Come along as we highlight the most exciting running races around the globe — there’s truly something for everyone (couch potatoes and winos included!).<li>
                       </ul>
                   </div>
               </div>
 
-              <!-- Blog Item 2 -->
+              <!-- Member 2 -->
                <div class="item">
-                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Kevin.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
-                  <div class="post-info clearfix">
-                      <h4><a href="blog-single.htm">Kevin Byers</a></h4>
+                <div class="post-info clearfix">
+                      <h4><a href="https://everymove.org/blog/the-ultimate-top-10-5k-fun-runs">The Ultimate Top 10 5K Fun Runs</a></h4>
                       <ul class="blog-details-preview">
-                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
-                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
-                          <li><i class="icon-comment"></i><strong>Comments:</strong> <a href="#" title="Link">12</a><li>
-                          <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
+                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> May 21, 2013<li>
+                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="everymove.org" title="Link">Christy Kelly on EveryMove.org</a><li>
+                          <li><i class="icon-comment"></i><strong>Description: </strong>Why just run when you can "Fun Run"?<br/>In the past few years, fun runs have been growing in popularity. Each with a different theme, these races focus less on breaking records and more on getting active and having a good time. Fun runs are a great way for beginners to get motivated and for seasoned athletes to break up the monotony of training.<li>
                       </ul>
                   </div>
               </div>
 
-               <!-- Blog Item 3 -->
+              <!-- Member 3 -->
                <div class="item">
-                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/David.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
-                  <div class="post-info clearfix">
-                      <h4><a href="blog-single.htm">David Aguirre</a></h4>
+                <div class="post-info clearfix">
+                      <h4><a href="http://health.usnews.com/health-news/health-wellness/slideshows/10-themed-races-to-make-getting-in-shape-fun">The Ultimate Top 10 5K Fun Runs</a></h4>
                       <ul class="blog-details-preview">
-                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
-                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
-                          <li><i class="icon-comment"></i><strong>Comments:</strong> <a href="#" title="Link">12</a><li>
-                          <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
+                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> July 31, 2013<li>
+                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="everymove.org" title="Link">Cynthia Washicko on Health.USNews.com</a><li>
+                          <li><i class="icon-comment"></i><strong>Description: </strong>Exercise doesn’t have to be boring – at least that’s the theory behind the plethora of fun runs popping up across the country. Attracting runners with light-hearted themes, many of these promise participants a good time with a good dose of exercise. So whether you prefer being chased by zombies or dancing away a 5k, here are 10 runs to get you off the couch and back in shape.<li>
                       </ul>
                   </div>
               </div>
-
-                <!-- Blog Item 4 -->
-               <div class="item">
-                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Edgar.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
-                  <div class="post-info clearfix">
-                      <h4><a href="blog-single.htm">Edgar Treto</a></h4>
-                      <ul class="blog-details-preview">
-                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
-                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
-                          <li><i class="icon-comment"></i><strong>Comments:</strong> <a href="#" title="Link">12</a><li>
-                          <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
-                      </ul>
-                  </div>
-              </div>
-
-              <!-- Blog Item 5 -->
-               <div class="item">
-                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Hector.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
-                  <div class="post-info clearfix">
-                      <h4><a href="blog-single.htm">Hector Garcia</a></h4>
-                      <ul class="blog-details-preview">
-                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
-                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
-                          <li><i class="icon-comment"></i><strong>Comments:</strong> <a href="#" title="Link">12</a><li>
-                          <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
-                      </ul>
-                  </div>
-              </div>
-
-              <!-- Blog Item 6 -->
-               <div class="item">
-                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Alyssa.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
-                  <div class="post-info clearfix">
-                      <h4><a href="blog-single.htm">Alyssa Williams</a></h4>
-                      <ul class="blog-details-preview">
-                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
-                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
-                          <li><i class="icon-comment"></i><strong>Comments:</strong> <a href="#" title="Link">12</a><li>
-                          <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
-                      </ul>
-                  </div>
-              </div>
-              
           </div>
       </div>  
     </div>
       
-    <!-- Client Area
+    <!-- Link
     ================================================== -->
     <div class="span6">
 
-        <h5 class="title-bg">Featured run
-            <small></small>
-            <button id="btn-client-next" class="btn btn-inverse btn-mini" type="button">&raquo;</button>
-            <button id="btn-client-prev" class="btn btn-inverse btn-mini" type="button">&laquo;</button>
-        </h5>
+        <h6 class="title-bg">Our Team: <small>Austin Isms</small></h6>
 
-        <!-- Client Testimonial Slider-->
-        <div id="clientCarousel" class="carousel slide no-margin">
-        <!-- Carousel items -->
-        <div class="carousel-inner">
+            <div class="accordion" id="accordion2">
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                        Collapsible Group Item #1
+                        </a>
+                    </div>
+                    <div id="collapseOne" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                        </div>
+                    </div>
+                </div>
 
-               <!-- Blog Item 1 -->
-              <div class="active item">
-                  <a href="funruns/0"><img src="{{ url_for('static', filename='img/racePhotos/wipeout1.png') }}" alt="" class="align-left blog-thumb-preview" width=60% height=60%/></a>
-                  <div class="post-info clearfix">
-                      <h4><a href="funruns/0">Wipeout Run</a></h4>
-                      <ul class="blog-details-preview">
-                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> March 24, 2015<li>
-                          <li><i class="icon-comment"></i><strong>Description:</strong> Try out the obstacles from the hit TV show "Wipeout"!<li>
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                        Collapsible Group Item #2
+                        </a>
+                    </div>
+                    <div id="collapseTwo" class="accordion-body collapse">
+                        <div class="accordion-inner">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                        </div>
+                    </div>
+                </div>
 
-                      </ul>
-                  </div>
-              </div>
+                 <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                        Collapsible Group Item #3
+                        </a>
+                    </div>
+                    <div id="collapseThree" class="accordion-body collapse">
+                        <div class="accordion-inner">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
+                        </div>
+                    </div>
+                </div>
 
-            <div class="item">
-                <p class="quote-text">"Adipiscing elit. In interdum felis fermentum ipsum molestie sed porttitor ligula rutrum. Morbi blandit ultricies ultrices. Vivamus nec lectus sed orci molestie molestie."<cite>- Another Client Name, Company Name</cite></p>
-            </div>
-
-            <div class="item">
-                <p class="quote-text">"Mauris eget tellus sem. Cras sollicitudin sem eu elit aliquam quis condimentum nulla suscipit. Nam sed magna ante. Ut eget suscipit mauris."<cite>- On More Client, The Company</cite></p>
-            </div>
-            
-        </div>
-        </div>
 
 
     </div>
