--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -109,7 +109,7 @@
 
                     <!-- Gallery Item 1 -->
                     <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
-                      <a href="/">
+                      <a href="/challenges/0">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
