modify uml diagram

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -172,14 +172,14 @@
                     </div>
                     <h5>David Aguirre</h5>
                     <p>
-                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
-                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> anwilliams93@gmail.com</a><br/>
-                        <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
-                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
-                        <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
-                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
-                        <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
-                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
+                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/daguirre92"> Click Here</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:david.aguirre@utexas.edu"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-pencil"></i><strong>Major:</strong> Computer Science and Economics<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> March 25, 1992<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop <br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Skiing, Hiking, Camping, Swimming, Dogs, Austin, Board Games<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> “If I had asked people what they wanted, they would have said faster horses.” -Henry Ford <br/>
                     </p>
                 </div>
                 <div class="span4">
@@ -204,7 +204,7 @@
                     </div>
                     <h5>Hector Garcia</h5>
                     <p>
-                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
+                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/hektor11"> Click Here</a><br/>
                         <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:hectuanerz@gmail.com"> hectuanerz@gmail.com</a><br/>
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
                         <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
