added about info about david

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -173,7 +173,7 @@
                     <h5>David Aguirre</h5>
                     <p>
                         <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/daguirre92"> Click Here</a><br/>
-                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:david.aguirre@utexas.edu"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:david.aguirre@utexas.edu"> david.aguirre@utexas.edu</a><br/>
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science and Economics<br/>
                         <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
                         <i class="icon-gift"></i><strong>Birthday:</strong> March 25, 1992<br/>
