fixed a title and got rid of the link to a non-existent photo

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -192,7 +192,7 @@ $(document).ready(function () {
               <!-- Member 3 -->
                <div class="item">
                 <div class="post-info clearfix">
-                      <h4><a href="http://health.usnews.com/health-news/health-wellness/slideshows/10-themed-races-to-make-getting-in-shape-fun">The Ultimate Top 10 5K Fun Runs</a></h4>
+                      <h4><a href="http://health.usnews.com/health-news/health-wellness/slideshows/10-themed-races-to-make-getting-in-shape-fun">10 themed races to make getting in shape fun</a></h4>
                       <ul class="blog-details-preview">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> July 31, 2013<li>
                           <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="everymove.org" title="Link">Cynthia Washicko on Health.USNews.com</a><li>
@@ -266,7 +266,6 @@ $(document).ready(function () {
           <div class="row footer-row">
                 <div class="span3 footer-col">
                     <h5>About Us</h5>
-                   <img src="{{ url_for('static', filename='img/piccolo-footer-logo.png') }}" alt="Piccolo" /><br /><br />
                     <address>
                         <strong>The Austin Isms</strong><br />
                         2317 Speedway, Stop D9500<br />
