hopefully not hiding the descriptions now

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -193,7 +193,7 @@ $(document).ready(function () {
                <div class="item">
                 <div class="post-info clearfix">
                       <h4><a href="http://health.usnews.com/health-news/health-wellness/slideshows/10-themed-races-to-make-getting-in-shape-fun">10 themed races to make getting in shape fun</a></h4>
-                      <ul class="blog-details-preview">
+                      <ul style="border:1px; solid #000">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> July 31, 2013<li>
                           <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="everymove.org" title="Link">Cynthia Washicko on Health.USNews.com</a><li>
                           <li><i class="icon-comment"></i><strong>Description: </strong>Exercise doesn’t have to be boring – at least that’s the theory behind the plethora of fun runs popping up across the country. Attracting runners with light-hearted themes, many of these promise participants a good time with a good dose of exercise. So whether you prefer being chased by zombies or dancing away a 5k, here are 10 runs to get you off the couch and back in shape.<li>
