not hiding the other two descriptions now

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -169,7 +169,7 @@ $(document).ready(function () {
 
                   <div class="post-info clearfix">
                       <h4><a href="http://greatist.com/fitness/21-most-incredible-themed-races">The 21 Most Incredible Themed Races</a></h4>
-                      <ul class="blog-details-preview">
+                      <ul style="border:1px; solid #000">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> July 3, 2012<li>
                           <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="greatist.com" title="Link">Jordan Shakeshaft on Greatist.com</a><li>
                           <li><i class="icon-comment"></i><strong>Description: </strong>Zombies, Twinkies, and a photo op with Mickey Mouse? Today’s most amazing themed races feature insane obstacles, over-the-top costumes, and an outrageous supply of tasty treats. The best part: These wild n’ crazy events get the body, mind, and spirit off to the races. Come along as we highlight the most exciting running races around the globe — there’s truly something for everyone (couch potatoes and winos included!).<li>
@@ -181,7 +181,7 @@ $(document).ready(function () {
                <div class="item">
                 <div class="post-info clearfix">
                       <h4><a href="https://everymove.org/blog/the-ultimate-top-10-5k-fun-runs">The Ultimate Top 10 5K Fun Runs</a></h4>
-                      <ul class="blog-details-preview">
+                      <ul style="border:1px; solid #000">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> May 21, 2013<li>
                           <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="everymove.org" title="Link">Christy Kelly on EveryMove.org</a><li>
                           <li><i class="icon-comment"></i><strong>Description: </strong>Why just run when you can "Fun Run"?<br/>In the past few years, fun runs have been growing in popularity. Each with a different theme, these races focus less on breaking records and more on getting active and having a good time. Fun runs are a great way for beginners to get motivated and for seasoned athletes to break up the monotony of training.<li>
