themetempl.html had not been pushed yet

--- a/app/templates/challengetempl.html
+++ b/app/templates/challengetempl.html
@@ -169,7 +169,7 @@ $(document).ready(function () {
     <!-- Title Header -->
         <div class="span8"><!--Begin page content column-->
 
-        <h2>[[run.name]] &nbsp&nbsp | &nbsp&nbsp [[run.city]]</h2>
+        <h2>[[challenge.name]]</h2>
         
         <!-- Thumbnail Grid
         ================================================== -->
