--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -121,7 +121,7 @@
 
                     <!-- Gallery Item 2 -->
                     <li  class="span4 gallery-item" data-id="id-2" data-type="illustration">
-                      <a href="/">
+                      <a href="/challenges/1">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
@@ -133,7 +133,7 @@
 
                     <!-- Gallery Item 3 -->
                     <li  class="span4 gallery-item" data-id="id-3" data-type="illustration">
-                      <a href="/">
+                      <a href="/challenges/2">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
