--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -171,7 +171,7 @@ $(document).ready(function () {
                       <h4><a href="http://greatist.com/fitness/21-most-incredible-themed-races">The 21 Most Incredible Themed Races</a></h4>
                       <ul style="border:1px; solid #000">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> July 3, 2012<li>
-                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="greatist.com" title="Link">Jordan Shakeshaft on Greatist.com</a><li>
+                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="http://greatist.com" title="Link">Jordan Shakeshaft on Greatist.com</a><li>
                           <li><i class="icon-comment"></i><strong>Description: </strong>Zombies, Twinkies, and a photo op with Mickey Mouse? Today’s most amazing themed races feature insane obstacles, over-the-top costumes, and an outrageous supply of tasty treats. The best part: These wild n’ crazy events get the body, mind, and spirit off to the races. Come along as we highlight the most exciting running races around the globe — there’s truly something for everyone (couch potatoes and winos included!).<li>
                       </ul>
                   </div>
@@ -183,7 +183,7 @@ $(document).ready(function () {
                       <h4><a href="https://everymove.org/blog/the-ultimate-top-10-5k-fun-runs">The Ultimate Top 10 5K Fun Runs</a></h4>
                       <ul style="border:1px; solid #000">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> May 21, 2013<li>
-                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="everymove.org" title="Link">Christy Kelly on EveryMove.org</a><li>
+                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="http://everymove.org" title="Link">Christy Kelly on EveryMove.org</a><li>
                           <li><i class="icon-comment"></i><strong>Description: </strong>Why just run when you can "Fun Run"?<br/>In the past few years, fun runs have been growing in popularity. Each with a different theme, these races focus less on breaking records and more on getting active and having a good time. Fun runs are a great way for beginners to get motivated and for seasoned athletes to break up the monotony of training.<li>
                       </ul>
                   </div>
@@ -195,7 +195,7 @@ $(document).ready(function () {
                       <h4><a href="http://health.usnews.com/health-news/health-wellness/slideshows/10-themed-races-to-make-getting-in-shape-fun">10 themed races to make getting in shape fun</a></h4>
                       <ul style="border:1px; solid #000">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> July 31, 2013<li>
-                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="everymove.org" title="Link">Cynthia Washicko on Health.USNews.com</a><li>
+                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="http://usnews.com" title="Link">Cynthia Washicko on Health.USNews.com</a><li>
                           <li><i class="icon-comment"></i><strong>Description: </strong>Exercise doesn’t have to be boring – at least that’s the theory behind the plethora of fun runs popping up across the country. Attracting runners with light-hearted themes, many of these promise participants a good time with a good dose of exercise. So whether you prefer being chased by zombies or dancing away a 5k, here are 10 runs to get you off the couch and back in shape.<li>
                       </ul>
                   </div>
