trying to fix sidebar slideshow

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -201,8 +201,7 @@ $(document).ready(function () {
           <div class="carousel-inner">
 
                <!-- Sidebar Pic 1 -->
-              <div class="active item">
-
+               <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[4] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
@@ -210,8 +209,7 @@ $(document).ready(function () {
                   </div>
               </div>
               <!-- Sidebar Pic 2 -->
-              <div class="active item">
-
+               <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[5] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
@@ -219,8 +217,7 @@ $(document).ready(function () {
                   </div>
               </div>
               <!-- Sidebar Pic 3 -->
-              <div class="active item">
-
+               <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[6] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
@@ -228,8 +225,7 @@ $(document).ready(function () {
                   </div>
               </div>
               <!-- Sidebar Pic 4 -->
-              <div class="active item">
-
+               <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[7] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
@@ -237,8 +233,7 @@ $(document).ready(function () {
                   </div>
               </div>
               <!-- Sidebar Pic 5 -->
-              <div class="active item">
-
+               <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[8] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
