hopefully the pictures show up this time

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -201,7 +201,7 @@ $(document).ready(function () {
           <div class="carousel-inner">
 
                <!-- Sidebar Pic 1 -->
-               <div class="item">
+               <div class="active item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[4] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
