fixed drop down navigation menu

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -109,10 +109,10 @@ $(document).ready(function () {
               <select onchange="window.open(this.options[this.selectedIndex].value,'_top')">
                   <option value="">Navigate...</option>
                   <option value="/">Home</option>
-                  <option value="/funruns">Events</option>
-                  <option value="/themes">Themes</option>
-                  <option value="/challenges">Challenges</option>
-                  <option value="/locations">Locations</option>
+                  <option value="/funruns">Fun Runs</option>
+                  <option value="/themes">Fun Themes</option>
+                  <option value="/challenges">Fun Challenges</option>
+                  <option value="/locations">Fun Locations</option>
                   <option value="/about">About</option>
               </select>
             </div>
