hopefully pictures show up and it does not just say thumbnail

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -199,6 +199,7 @@ $(document).ready(function () {
 
           <!-- Carousel items -->
           <div class="carousel-inner">
+            <ul class="thumbnails">
 
                <!-- Sidebar Pic 1 -->
                <div class="active item">
@@ -240,6 +241,7 @@ $(document).ready(function () {
                       </ul>
                   </div>
               </div>
+            </ul>
           </div>
       </div>  
 
