still working on slideshow pictures

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -199,12 +199,11 @@ $(document).ready(function () {
 
           <!-- Carousel items -->
           <div class="carousel-inner">
-            <ul class="thumbnails">
 
                <!-- Sidebar Pic 1 -->
                <div class="active item">
                   <div class="post-info clearfix">
-                      <ul style="border:1px; solid #000">
+                      <ul class="thumbnails" style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[4] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
@@ -212,7 +211,7 @@ $(document).ready(function () {
               <!-- Sidebar Pic 2 -->
                <div class="item">
                   <div class="post-info clearfix">
-                      <ul style="border:1px; solid #000">
+                      <ul class="thumbnails" style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[5] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
@@ -220,7 +219,7 @@ $(document).ready(function () {
               <!-- Sidebar Pic 3 -->
                <div class="item">
                   <div class="post-info clearfix">
-                      <ul style="border:1px; solid #000">
+                      <ul class="thumbnails" style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[6] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
@@ -228,7 +227,7 @@ $(document).ready(function () {
               <!-- Sidebar Pic 4 -->
                <div class="item">
                   <div class="post-info clearfix">
-                      <ul style="border:1px; solid #000">
+                      <ul class="thumbnails" style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[7] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
@@ -236,12 +235,11 @@ $(document).ready(function () {
               <!-- Sidebar Pic 5 -->
                <div class="item">
                   <div class="post-info clearfix">
-                      <ul style="border:1px; solid #000">
+                      <ul class="thumbnails" style="border:1px; solid #000">
                           <li class="span6"><img ng-src="[[ imgs[8] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
-            </ul>
           </div>
       </div>  
 
